--- a/assets/sass/_theme/sections/posts.sass
+++ b/assets/sass/_theme/sections/posts.sass
@@ -164,3 +164,8 @@
         margin-bottom: 0
     .link
         @extend .link-more
+
+.authors__term,
+.categories__term
+    .blocks + .container
+        margin-top: $spacing3
